--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5113,3 +5113,735 @@ body {
 .cid-rbdixua16s .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-r5QOhcxmyS .navbar {
+  padding: .5rem 0;
+  background: #000000;
+  transition: none;
+  min-height: 77px;
+}
+.cid-r5QOhcxmyS .navbar-dropdown.bg-color.transparent.opened {
+  background: #000000;
+}
+.cid-r5QOhcxmyS a {
+  font-style: normal;
+}
+.cid-r5QOhcxmyS .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-r5QOhcxmyS .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-r5QOhcxmyS .nav-item:focus,
+.cid-r5QOhcxmyS .nav-link:focus {
+  outline: none;
+}
+.cid-r5QOhcxmyS .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-r5QOhcxmyS .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-r5QOhcxmyS .menu-logo {
+  margin-right: auto;
+}
+.cid-r5QOhcxmyS .menu-logo .navbar-brand {
+  display: -webkit-flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-r5QOhcxmyS .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-r5QOhcxmyS .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-r5QOhcxmyS .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-r5QOhcxmyS .menu-logo .navbar-brand .navbar-logo img {
+  display: -webkit-flex;
+}
+.cid-r5QOhcxmyS .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-r5QOhcxmyS .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-r5QOhcxmyS .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-r5QOhcxmyS .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-r5QOhcxmyS .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-r5QOhcxmyS .dropdown .dropdown-menu {
+  background: #000000;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-r5QOhcxmyS .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-r5QOhcxmyS .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-r5QOhcxmyS .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-r5QOhcxmyS .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-r5QOhcxmyS .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-r5QOhcxmyS .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-r5QOhcxmyS .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-r5QOhcxmyS .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-r5QOhcxmyS .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-r5QOhcxmyS .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-r5QOhcxmyS .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-r5QOhcxmyS button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-r5QOhcxmyS button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-r5QOhcxmyS button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-r5QOhcxmyS button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-r5QOhcxmyS button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-r5QOhcxmyS button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-r5QOhcxmyS button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-r5QOhcxmyS nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-r5QOhcxmyS nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-r5QOhcxmyS nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-r5QOhcxmyS nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-r5QOhcxmyS .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-r5QOhcxmyS .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-r5QOhcxmyS .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.collapsing,
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-r5QOhcxmyS .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-r5QOhcxmyS .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-r5QOhcxmyS .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-r5QOhcxmyS .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-r5QOhcxmyS .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-r5QOhcxmyS .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-r5QOhcxmyS .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-r5QOhcxmyS .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-r5QOhcxmyS .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-r5QOhcxmyS img {
+    height: 3.8rem !important;
+  }
+  .cid-r5QOhcxmyS .btn {
+    display: -webkit-flex;
+  }
+  .cid-r5QOhcxmyS button.navbar-toggler {
+    display: block;
+  }
+  .cid-r5QOhcxmyS .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-r5QOhcxmyS .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-r5QOhcxmyS .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-r5QOhcxmyS .navbar-collapse.collapsing,
+  .cid-r5QOhcxmyS .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-r5QOhcxmyS .navbar-collapse.collapsing .navbar-nav,
+  .cid-r5QOhcxmyS .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-r5QOhcxmyS .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-r5QOhcxmyS .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-r5QOhcxmyS .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-r5QOhcxmyS .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-r5QOhcxmyS .navbar-collapse.collapsing .navbar-buttons,
+  .cid-r5QOhcxmyS .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-r5QOhcxmyS .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-r5QOhcxmyS .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-r5QOhcxmyS .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-r5QOhcxmyS .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-r5QOhcxmyS .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-r5QOhcxmyS .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-r5QOhcxmyS .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-r5QOhcxmyS .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-r5QOhcxmyS .nav-link:hover,
+.cid-r5QOhcxmyS .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rt1zFkq1uU {
+  padding-top: 120px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/children-playing-istock.width-800-800x533.jpg");
+}
+.cid-rt1zGB2Izl {
+  padding-top: 45px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+}
+@media (min-width: 992px) {
+  .cid-rt1zGB2Izl .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rt1zGB2Izl .mbr-figure {
+    padding-top: 3rem;
+  }
+}
+.cid-rt1zGB2Izl .mbr-text,
+.cid-rt1zGB2Izl .mbr-section-btn {
+  color: #465052;
+}
+.cid-rt1zGB2Izl .mbr-section-title {
+  color: #465052;
+}
+.cid-rt1zIcKLyT {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-rt1zIcKLyT .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rt1zIcKLyT .section-text {
+  padding: 2rem 0;
+}
+.cid-rt1zIcKLyT .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rt1zIcKLyT .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rt1zKhnaV9 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #227f56;
+}
+.cid-rt1zKhnaV9 .testimonials-container {
+  margin: 0 auto;
+}
+.cid-rt1zKhnaV9 .testimonials-container .testimonials-item {
+  justify-content: center;
+  margin-top: 3rem;
+  -webkit-justify-content: center;
+}
+.cid-rt1zKhnaV9 .testimonials-container .testimonials-item .user {
+  background: #ffffff;
+}
+.cid-rt1zKhnaV9 .testimonials-container .testimonials-item .user.row {
+  margin: 0;
+}
+.cid-rt1zKhnaV9 .testimonials-container .testimonials-item .user .user_image {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  margin: 2rem auto 2rem auto;
+}
+.cid-rt1zKhnaV9 .testimonials-container .testimonials-item .user .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-rt1zKhnaV9 .testimonials-container .testimonials-item .user .testimonials-caption {
+  padding: 2rem;
+  padding: 2rem 2rem 2rem 0;
+}
+@media (max-width: 260px) {
+  .cid-rt1zKhnaV9 .user_image {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rt1zKhnaV9 .testimonials-caption {
+    padding: 0 2rem 2rem 2rem !important;
+  }
+}
+.cid-rt1zLSSBsg {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/img-626-2000x1334.jpg");
+}
+.cid-rt1zMDBRzw {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rt1zMDBRzw .counter-container {
+  color: #767676;
+}
+.cid-rt1zMDBRzw .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-rt1zMDBRzw .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-rt1zMDBRzw .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #227f56;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  content: '✓';
+}
+.cid-rt1zNwzGic {
+  padding-top: 45px;
+  padding-bottom: 60px;
+  background-color: #072116;
+}
+.cid-rt1zNwzGic .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rt1zNwzGic .timeline-text-content {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  margin-left: 2rem;
+}
+.cid-rt1zNwzGic .timeline-text-content p {
+  margin-bottom: 0;
+}
+.cid-rt1zNwzGic .time-line-date-content {
+  margin-right: 2rem;
+}
+.cid-rt1zNwzGic .time-line-date-content p {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  float: right;
+}
+.cid-rt1zNwzGic .timeline-element {
+  margin-bottom: 50px;
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.cid-rt1zNwzGic .timeline-element:hover .mbr-timeline-date {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-rt1zNwzGic .timeline-element:hover .timeline-text-content {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-rt1zNwzGic .mbr-timeline-date,
+.cid-rt1zNwzGic .timeline-text-content {
+  transition: all .4s;
+}
+.cid-rt1zNwzGic .reverse {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-rt1zNwzGic .reverse .timeline-text-content {
+  margin-right: 2rem;
+  margin-left: 0;
+}
+.cid-rt1zNwzGic .reverse .time-line-date-content {
+  margin-left: 2rem;
+  margin-right: 0rem;
+}
+.cid-rt1zNwzGic .reverse .time-line-date-content p {
+  float: left;
+}
+.cid-rt1zNwzGic .iconBackground {
+  position: absolute;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 30px;
+  display: inline-block;
+  background-color: #ffffff;
+  top: 20px;
+  margin-left: -10px;
+}
+.cid-rt1zNwzGic .separline:before {
+  top: 20px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #ffffff;
+  left: calc(50% - 1px);
+  height: calc(100% + 4rem);
+}
+@media (max-width: 768px) {
+  .cid-rt1zNwzGic .iconBackground {
+    left: 0 !important;
+  }
+  .cid-rt1zNwzGic .separline:before {
+    left: 0!important;
+  }
+  .cid-rt1zNwzGic .timeline-text-content {
+    margin-left: 0 !important;
+  }
+  .cid-rt1zNwzGic .time-line-date-content {
+    margin-right: 0 !important;
+  }
+  .cid-rt1zNwzGic .time-line-date-content p {
+    float: left !important;
+  }
+  .cid-rt1zNwzGic .reverse .time-line-date-content {
+    margin-left: 0 !important;
+  }
+  .cid-rt1zNwzGic .reverse .timeline-text-content {
+    margin-right: 0 !important;
+  }
+}
+.cid-rt1zNwzGic .mbr-timeline-title B {
+  color: #3f4040;
+}
+.cid-rt1zNwzGic .mbr-timeline-text {
+  color: #3f4040;
+}
+.cid-rt1zNwzGic .mbr-timeline-date {
+  color: #3f4040;
+}
+.cid-rt1zNwzGic .mbr-section-title {
+  color: #ffffff;
+}
+.cid-rt1zQ3Wlp4 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rt1zQ3Wlp4 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rt1zQ3Wlp4 .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-qU8A7WgWjS {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-qU8A7WgWjS .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-qU8A7WgWjS .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-qU8A7WgWjS .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-qU8A7WgWjS .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-qU8A7WgWjS .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-qU8A7WgWjS .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qU8A7WgWjS .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-qU8A7WgWjS .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-qU8A7WgWjS .media-container-row .row-copirayt p {
+  width: 100%;
+}
